--- a/game/public/home.html
+++ b/game/public/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <script src="./script/ingredients.js" type="module" defer></script>
 </head>
 <body>
     
