Gris is now fixed up

--- a/game/public/game.html
+++ b/game/public/game.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rat-Fender</title>
     <link rel="stylesheet" href="./style/gamegrid.css">
-    <script defer src="./script/pathMaker.js"></script>
+    <script type="module" src="./script/pathMaker.js"></script>
 </head>
 <body>
     <ul class="game-grid">
