Systeme de calcul du PDR par round

--- a/game/public/game.html
+++ b/game/public/game.html
@@ -6,6 +6,7 @@
     <title>Rat-Fender</title>
     <link rel="stylesheet" href="./style/gamegrid.css">
     <script type="module" src="./script/pathMaker.js"></script>
+    <script type="module" src="./script/pdrManager.js"></script>
 </head>
 <body>
     <ul class="game-grid">
