Engineering game and random pathing

--- a/game/public/game.html
+++ b/game/public/game.html
@@ -6,14 +6,12 @@
     <title>Rat-Fender</title>
     <link rel="stylesheet" href="./style/gamegrid.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/8.6.6/pixi.min.js" integrity="sha512-9Che/pADxtzmgRM/Lt7g+wgmgVPNu4qLCOjH+owFqCSpd9HHCi1fMYp+XtfE8nOdRQWUsD0TUNQUc5Z1SwaLyw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script type="module" src="./script/gridManager.js"></script>
-    <script type="module" src="./script/pathMaker.js"></script>
-    <script type="module" src="./script/pdrManager.js"></script>
+    <script type="module" src="./script/game.js"></script>
 </head>
 <body>
-    <ul class="game-grid">
-
-    </ul>
+    <div id="game">
+        
+    </div>
     <div>
         <button class="moveEntity">Move Entity</button>
         <p class="pdr"></p>
