sprites almost working

--- a/game/public/game.html
+++ b/game/public/game.html
@@ -11,14 +11,18 @@
     <script type="module" src="./script/pdrManager.js"></script>
 </head>
 <body>
-    <ul class="game-grid">
-
-    </ul>
-    <div>
-        <button class="moveEntity">Move Entity</button>
-        <p class="pdr"></p>
-        <button class="endRound">End Round</button>
-    </div>
+    <section>
+        <ul class="game-grid">
     
+        </ul>
+        <div class="tower_upgrade">
+    
+        </div>
+    </section>
+    <section>
+        <div class="units">
+
+        </div>
+    </section>
 </body>
 </html>
