--- a/game/public/game.html
+++ b/game/public/game.html
@@ -6,6 +6,8 @@
     <title>Rat-Fender</title>
     <link rel="stylesheet" href="./style/gamegrid.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/8.6.6/pixi.min.js" integrity="sha512-9Che/pADxtzmgRM/Lt7g+wgmgVPNu4qLCOjH+owFqCSpd9HHCi1fMYp+XtfE8nOdRQWUsD0TUNQUc5Z1SwaLyw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/pixi.js@8/dist/pixi.min.mjs"></script>
+    <script type="module" src="./script/assetsLoad.js"></script>
     <script type="module" src="./script/game.js"></script>
 </head>
 <body>
