Class tower update

--- a/game/public/game.html
+++ b/game/public/game.html
@@ -22,6 +22,7 @@
         <button class="moveEntity">Move Entity</button>
         <p class="pdr"></p>
         <button class="endRound">End Round</button>
+        <button class="createTower">Create Toawer</button>
     </div>
     <main>
         <section class="top">
