Réparation des problèmes lié a l'api

--- a/game/public/home.html
+++ b/game/public/home.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ratfender-accueil</title>
+    <link rel="stylesheet" href="./style/home.css">
     <script src="./script/ingredients.js" type="module" defer></script>
 </head>
 <body>
-    
+    <h1>Rat-Fender</h1>
 </body>
 </html>
