--- a/game/public/leaderboard.html
+++ b/game/public/leaderboard.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="button">
-      <button class="home-button" onclick="window.location.href='home.html'">
+      <button class="home-button" onclick="window.location.href='./home.html'">
         Retour à l'accueil
       </button>
     </div>
