déplacement du fichier api

--- a/game/public/home.html
+++ b/game/public/home.html
@@ -9,6 +9,6 @@
     <script src="./script/ingredients.js" type="module" defer></script>
 </head>
 <body>
-    
+    <h1>Rat-Fender</h1>
 </body>
 </html>
