Selection of towers and ingredients functionnal

--- a/game/public/game.html
+++ b/game/public/game.html
@@ -24,7 +24,40 @@
                 <div class="money">
                 
                 </div>
-                
+
+                <div class="cleared-board">
+                    <modale class="upgrade-card">
+                        <p class="cheeseName"></p>
+                        <div class="imgContainer">
+                            <img src="" id="cheesePic">
+                        </div>
+                        <div class="upgrades">
+                            <div class="upgrade">
+                                <p class="upgradeName"></p>
+                                <p>Prix :<p class="upgradePrice">0</p></p>
+                            </div>
+                            <div class="upgrade">
+                                <p class="upgradeName"></p>
+                                <p>Prix :<p class="upgradePrice">0</p></p>
+                            </div>
+                            <div class="upgrade">
+                                <p class="upgradeName"></p>
+                                <p>Prix :<p class="upgradePrice">0</p></p>
+                            </div>
+                        </div>
+                    </modale>
+                    <modale class="upgrade-card-ingredient">
+                        <p class="ingredientName"></p>
+                        <div class="imgContainer">
+                            <img src="" id="ingredientPic">
+                        </div>
+                            <div class="upgrade">
+                                <p class="ingredient-upgradeName"></p>
+                                <p>Prix :<p class="ingredient-upgradePrice">0</p></p>
+                            </div>
+                        </div>
+                    </modale>
+                </div>
             </div>
         </section>
         <section class="bottom">
