début css de la page game

--- a/game/public/game.html
+++ b/game/public/game.html
@@ -33,17 +33,17 @@
                             <img src="" id="cheesePic">
                         </div>
                         <div class="upgrades">
-                            <div class="upgrade">
+                            <div class="upgrade path1">
                                 <p class="upgradeName"></p>
-                                <p>Prix :<p class="upgradePrice">0</p></p>
+                                <p>Prix :<p class="path1Price">50</p></p>
                             </div>
-                            <div class="upgrade">
+                            <div class="upgrade path2">
                                 <p class="upgradeName"></p>
-                                <p>Prix :<p class="upgradePrice">0</p></p>
+                                <p>Prix :<p class="path2Price">50</p></p>
                             </div>
-                            <div class="upgrade">
+                            <div class="upgrade path3">
                                 <p class="upgradeName"></p>
-                                <p>Prix :<p class="upgradePrice">0</p></p>
+                                <p>Prix :<p class="path3Price">50</p></p>
                             </div>
                         </div>
                     </modale>
@@ -64,19 +64,19 @@
         <section class="bottom">
             <div class="units">
                 <ul class="tower_list placer">
-                    <li>
+                    <li class="tower_tome">
                         <img src="./assets/tomeFromage.png" alt="tomeFromage" id="tome">
                         <p class="price">caca</p>
                     </li>
-                    <li>
+                    <li class="tower_comte">
                         <img src="./assets/comteFromage.png" alt="comteFromage" id="comte">
                         <p class="price"></p>
                     </li>
-                    <li>
+                    <li class="tower_chevre">
                         <img src="./assets/chevreFromage.png" alt="chevreFromage" id="chevre">
                         <p class="price"></p>
                     </li>
-                    <li>
+                    <li class="tower_roquefort">
                         <img src="./assets/roquefortFromage.png" alt="roquefortFromage"id="roquefort">
                         <p class="price"></p>
                     </li>
