you can place ingredients now

--- a/game/public/game.html
+++ b/game/public/game.html
@@ -34,15 +34,15 @@
                         </div>
                         <div class="upgrades">
                             <div class="upgrade path1">
-                                <p class="upgradeName"></p>
+                                <p class="upgradeName">Amélioration d'attaque</p>
                                 <p>Prix :<p class="path1Price">50</p></p>
                             </div>
                             <div class="upgrade path2">
-                                <p class="upgradeName"></p>
+                                <p class="upgradeName">Amélioration de vitesse</p>
                                 <p>Prix :<p class="path2Price">50</p></p>
                             </div>
                             <div class="upgrade path3">
-                                <p class="upgradeName"></p>
+                                <p class="upgradeName">Amélioration de portée</p>
                                 <p>Prix :<p class="path3Price">50</p></p>
                             </div>
                         </div>
@@ -82,27 +82,27 @@
                     </li>
                 </ul>
                 <ul class="ingredients_list placer">
-                    <li>
+                    <li class="ingredient_milk">
                         <img src="./assets/milkIngredient.png" alt="milkIngredient" id="milk">
                         <p class="price"></p>
                     </li>
-                    <li>
+                    <li class="ingredient_jalapenos">
                         <img src="./assets/jalapenosIngredient.png" alt="jalapenosIngredient" id="jalapenos">
                         <p class="price"></p>
                     </li>
-                    <li>
+                    <li class="ingredient_pepper">
                         <img src="./assets/pepperIngredient.png" alt="pepperIngredient" id="pepper">
                         <p class="price"></p>
                     </li>
-                    <li>
+                    <li class="ingredient_herbe">
                         <img src="./assets/herbeIngredient.png" alt="herbeIngredient" id="herbe">
                         <p class="price"></p>
                     </li>
-                    <li>
+                    <li class="ingredient_figue">
                         <img src="./assets/figueIngredient.png" alt="figueIngredient" id="figue">
                         <p class="price"></p>
                     </li>
-                    <li>
+                    <li class="ingredient_onion">
                         <img src="./assets/onionIngredient.png" alt="onionIngredient" id="onion">
                         <p class="price"></p>
                     </li>
