css + rajout img pour argent

--- a/game/public/game.html
+++ b/game/public/game.html
@@ -23,7 +23,7 @@
             </div>
             <div class="info">
                 <div class="money">
-                
+                    <img src="./assets/ratSkin.png" alt="ratSkin" id="ratSkin">
                 </div>
 
                 <div class="cleared-board">
