--- a/game/public/game.html
+++ b/game/public/game.html
@@ -10,7 +10,11 @@
         integrity="sha512-9Che/pADxtzmgRM/Lt7g+wgmgVPNu4qLCOjH+owFqCSpd9HHCi1fMYp+XtfE8nOdRQWUsD0TUNQUc5Z1SwaLyw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/pixi.js@8/dist/pixi.min.mjs"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.7/gsap.min.js" integrity="sha512-f6bQMg6nkSRw/xfHw5BCbISe/dJjXrVGfz9BSDwhZtiErHwk7ifbmBEtF9vFW8UNIQPhV2uEFVyI/UHob9r7Cw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.7/gsap.min.js"
+        integrity="sha512-f6bQMg6nkSRw/xfHw5BCbISe/dJjXrVGfz9BSDwhZtiErHwk7ifbmBEtF9vFW8UNIQPhV2uEFVyI/UHob9r7Cw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js">
+    </script>
     <script type="module" src="./script/assetsLoad.js"></script>
     <script type="module" src="./script/game.js"></script>
 </head>
@@ -19,11 +23,14 @@
     <main>
         <section class="top">
             <div id="game">
-                
+
             </div>
             <div class="info">
                 <div class="money">
-                
+
+                </div>
+                <div class="pausePlayButton">
+
                 </div>
 
                 <div class="cleared-board">
@@ -35,15 +42,21 @@
                         <div class="upgrades">
                             <div class="upgrade path1">
                                 <p class="upgradeName"></p>
-                                <p>Prix :<p class="path1Price">50</p></p>
+                                <p>Prix :
+                                <p class="path1Price">50</p>
+                                </p>
                             </div>
                             <div class="upgrade path2">
                                 <p class="upgradeName"></p>
-                                <p>Prix :<p class="path2Price">50</p></p>
+                                <p>Prix :
+                                <p class="path2Price">50</p>
+                                </p>
                             </div>
                             <div class="upgrade path3">
                                 <p class="upgradeName"></p>
-                                <p>Prix :<p class="path3Price">50</p></p>
+                                <p>Prix :
+                                <p class="path3Price">50</p>
+                                </p>
                             </div>
                         </div>
                     </modale>
@@ -52,13 +65,15 @@
                         <div class="imgContainer">
                             <img src="" id="ingredientPic">
                         </div>
-                            <div class="upgrade">
-                                <p class="ingredient-upgradeName"></p>
-                                <p>Prix :<p class="ingredient-upgradePrice">0</p></p>
-                            </div>
+                        <div class="upgrade">
+                            <p class="ingredient-upgradeName"></p>
+                            <p>Prix :
+                            <p class="ingredient-upgradePrice">0</p>
+                            </p>
                         </div>
-                    </modale>
                 </div>
+                </modale>
+            </div>
             </div>
         </section>
         <section class="bottom">
@@ -77,7 +92,7 @@
                         <p class="price"></p>
                     </li>
                     <li class="tower_roquefort">
-                        <img src="./assets/roquefortFromage.png" alt="roquefortFromage"id="roquefort">
+                        <img src="./assets/roquefortFromage.png" alt="roquefortFromage" id="roquefort">
                         <p class="price"></p>
                     </li>
                 </ul>
