display: none pour le modale

--- a/game/public/game.html
+++ b/game/public/game.html
@@ -29,8 +29,11 @@
                 <div class="money">
                     <img src="./assets/ratSkin.png" alt="ratSkin" id="ratSkin">
                 </div>
+                <button class="pausePlayButton">
+                    Pause
+                  </button>
 
-                <div class="cleared-board">
+                <div class="cleared-board" >
                     <modale class="upgrade-card">
                         <p class="cheeseName"></p>
                         <div class="imgContainer">
