push de ta mere

--- a/game/public/game.html
+++ b/game/public/game.html
@@ -26,9 +26,13 @@
 
             </div>
             <div class="info">
-                <div>
-                    <img src="./assets/ratSkin.png" alt="ratSkin" id="ratSkin">
+                <div class="moneyBar">
+                    <div class="img-container">
+                        <img src="./assets/ratSkin.png" alt="ratSkin" id="ratSkin">
+                    </div>
                     <p class="money"></p>
+                </div>
+                <div class="hp">
                 </div>
                 <button class="pausePlayButton">
                     Pause
@@ -74,45 +78,45 @@
                 <ul class="tower_list placer">
                     <li class="tower_tome">
                         <img src="./assets/tomeFromage.png" alt="tomeFromage" id="tome">
-                        <p class="price">caca</p>
+                        <p class="price">50$</p>
                     </li>
                     <li class="tower_comte">
                         <img src="./assets/comteFromage.png" alt="comteFromage" id="comte">
-                        <p class="price"></p>
+                        <p class="price">100$</p>
                     </li>
                     <li class="tower_chevre">
                         <img src="./assets/chevreFromage.png" alt="chevreFromage" id="chevre">
-                        <p class="price"></p>
+                        <p class="price">100$</p>
                     </li>
                     <li class="tower_roquefort">
                         <img src="./assets/roquefortFromage.png" alt="roquefortFromage" id="roquefort">
-                        <p class="price"></p>
+                        <p class="price">100$</p>
                     </li>
                 </ul>
                 <ul class="ingredients_list placer">
                     <li class="ingredient_milk">
                         <img src="./assets/milkIngredient.png" alt="milkIngredient" id="milk">
-                        <p class="price"></p>
+                        <p class="price">50$</p>
                     </li>
                     <li class="ingredient_jalapenos">
                         <img src="./assets/jalapenosIngredient.png" alt="jalapenosIngredient" id="jalapenos">
-                        <p class="price"></p>
+                        <p class="price">50$</p>
                     </li>
                     <li class="ingredient_pepper">
                         <img src="./assets/pepperIngredient.png" alt="pepperIngredient" id="pepper">
-                        <p class="price"></p>
+                        <p class="price">50$</p>
                     </li>
                     <li class="ingredient_herbe">
                         <img src="./assets/herbeIngredient.png" alt="herbeIngredient" id="herbe">
-                        <p class="price"></p>
+                        <p class="price">50$</p>
                     </li>
                     <li class="ingredient_figue">
                         <img src="./assets/figueIngredient.png" alt="figueIngredient" id="figue">
-                        <p class="price"></p>
+                        <p class="price">50$</p>
                     </li>
                     <li class="ingredient_onion">
                         <img src="./assets/onionIngredient.png" alt="onionIngredient" id="onion">
-                        <p class="price"></p>
+                        <p class="price">50$</p>
                     </li>
                 </ul>
             </div>
