Fixations des bugs presents dans la phase de test

--- a/game/public/game.html
+++ b/game/public/game.html
@@ -26,18 +26,26 @@
 
             </div>
             <div class="info">
+                <div class="info-top">
+
+                
                 <div class="moneyBar">
                     <div class="img-container">
                         <img src="./assets/ratSkin.png" alt="ratSkin" id="ratSkin">
                     </div>
                     <p class="money"></p>
                 </div>
-                <div class="hp">
-                </div>
                 <button class="pausePlayButton">
-                    Pause
-                  </button>
+                    ⏸
+                </button>
+                <div class="lifeBar">
+                    <div class="img-container">
+                        <img src="./assets/hearth.png" alt="Vie" id="hearthSkin">
+                    </div>
+                    <p class="hp"></p>
+                </div>
 
+                </div>
                 <div class="cleared-board" >
                     <modale class="upgrade-card">
                         <p class="cheeseName"></p>
@@ -74,6 +82,11 @@
             </div>
         </section>
         <section class="bottom">
+            <div class="black-flag">
+                <div class="flag-text">
+                    Place your tower
+                </div>
+            </div>
             <div class="units">
                 <ul class="tower_list placer">
                     <li class="tower_tome">
