Equilibrage et modifications du jeu

--- a/public/game.html
+++ b/public/game.html
@@ -89,49 +89,50 @@
             </div>
             <div class="units">
                 <ul class="tower_list placer">
-                    <li class="tower_tome">
+                    <li class="tower_tome" data-tooltip="Fromage de Tome :\n Tour classique, rapide mais faible">
                         <img src="./assets/tomeFromage.png" alt="tomeFromage" id="tome">
-                        <p class="price">50$</p>
+                        <p class="price"></p>
                     </li>
-                    <li class="tower_comte">
+                    <li class="tower_comte" data-tooltip="Fromage de Comte :\n Tour qui détecte jusqu'aux rats \n les plus furtifs">
                         <img src="./assets/comteFromage.png" alt="comteFromage" id="comte">
-                        <p class="price">100$</p>
+                        <p class="price"></p>
                     </li>
-                    <li class="tower_chevre">
+                    <li class="tower_chevre" data-tooltip="Fromage de Chèvre :\n Tour qui attaque les rats multicolors \n sans broncher">
                         <img src="./assets/chevreFromage.png" alt="chevreFromage" id="chevre">
-                        <p class="price">100$</p>
+                        <p class="price"></p>
                     </li>
-                    <li class="tower_roquefort">
+                    <li class="tower_roquefort" data-tooltip="Fromage de Roquefort :\n Tour puissante et lente, \n perce les armures les plus robustes">
                         <img src="./assets/roquefortFromage.png" alt="roquefortFromage" id="roquefort">
-                        <p class="price">100$</p>
+                        <p class="price"></p>
                     </li>
                 </ul>
                 <ul class="ingredients_list placer">
-                    <li class="ingredient_milk">
+                    <li class="ingredient_milk" data-tooltip="Lait : \n Augmente l'attaque">
                         <img src="./assets/milkIngredient.png" alt="milkIngredient" id="milk">
-                        <p class="price">50$</p>
+                        <p class="price"></p>
                     </li>
-                    <li class="ingredient_jalapenos">
-                        <img src="./assets/jalapenosIngredient.png" alt="jalapenosIngredient" id="jalapenos">
-                        <p class="price">50$</p>
-                    </li>
-                    <li class="ingredient_pepper">
-                        <img src="./assets/pepperIngredient.png" alt="pepperIngredient" id="pepper">
-                        <p class="price">50$</p>
-                    </li>
-                    <li class="ingredient_herbe">
+                    <li class="ingredient_herbe" data-tooltip="Herbe de provence : \n Augmente la vitesse d'attaque">
                         <img src="./assets/herbeIngredient.png" alt="herbeIngredient" id="herbe">
-                        <p class="price">50$</p>
+                        <p class="price"></p>
                     </li>
-                    <li class="ingredient_figue">
+                    <li class="ingredient_figue" data-tooltip="Figue : \n Augment la portée">
                         <img src="./assets/figueIngredient.png" alt="figueIngredient" id="figue">
-                        <p class="price">50$</p>
+                        <p class="price"></p>
                     </li>
-                    <li class="ingredient_onion">
+                    <li class="ingredient_onion" data-tooltip="Onion : \n Permet aux tours dans la portée \n de détecter les rats camouflés">
                         <img src="./assets/onionIngredient.png" alt="onionIngredient" id="onion">
-                        <p class="price">50$</p>
+                        <p class="price"></p>
+                    </li>
+                    <li class="ingredient_jalapenos" data-tooltip="Piment jalapenos : \n Permet aux tours dans la portée \n de percer les armures">
+                        <img src="./assets/jalapenosIngredient.png" alt="jalapenosIngredient" id="jalapenos">
+                        <p class="price"></p>
+                    </li>
+                    <li class="ingredient_pepper" data-tooltip="Poivre 3 épices : \n Permet aux tours dans la portée \n de faire plus de dégats aux \n rats multicolors">
+                        <img src="./assets/pepperIngredient.png" alt="pepperIngredient" id="pepper">
+                        <p class="price"></p>
                     </li>
                 </ul>
+                <div id="tooltip">Texte personnalisé</div>
             </div>
         </section>
     </main>
